syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetesredis.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesredis/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesredis/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//redis-kubernetes
message KubernetesRedis {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesRedis'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesRedisSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesRedisStatus status = 5;
}

//redis-kubernetes status.
message KubernetesRedisStatus {
  //stack-outputs
  KubernetesRedisStackOutputs outputs = 1;
}
